# agentkernel

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  docker-compose.yml
esm/: .env.example  package-lock.json  package.json  tsconfig.json
esm/engines/01_router/: guardrails.js  router.js  token_optimizer.js
esm/engines/02_memory/: cache.js  scar.js
esm/engines/03_retriever/: analyzer.js  firecrawlScraper.js  graphify.js  index.js  search.js
esm/engines/04_queue/: breaker.js  index.js  queue.js  stream.js
esm/engines/05_media/: StoryTemplate.jsx  chaipitch.js  subtitle_generator.js  voice.js
esm/engines/06_auth/: auth.js  crud.js  database.js  index.js  schema.prisma
esm/tests/: graphify.test.js  router.test.js  scar.test.js  search.test.js
examples/research-video-assistant/: run_assistant.js  run_assistant.py
python/: .env.example  Dockerfile  pyproject.toml  requirements.txt
python/engines/auth/: __init__.py  auth.py  crud.py  database.py  models.py
python/engines/memory/: __init__.py  cache.py  scar.py
python/engines/outreach/: __init__.py  chaipitch.py
python/engines/queue/: __init__.py  breaker.py  queue.py  stream.py
python/engines/retriever/: __init__.py  analyzer.py  firecrawl_scraper.py  graphify.py  search.py
python/engines/router/: __init__.py  guardrails.py  router.py  token_optimizer.py
python/tests/: test_graphify.py  test_router.py  test_scar.py  test_search.py
scripts/: make-engines-svg.py
visual/: visual-agentkernel.html
