[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equilibrium-python"
version = "1.0.0"
description = "Equilibrium Multi-Engine Agentic & Outreach Platform (Python Suite)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
